--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "@popperjs/core": "2.10.2",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
+    "axios": "^1.4.0",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
@@ -31,14 +34,14 @@
     "vuex": "4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.0",
-    "@vue/cli-plugin-eslint": "4.5.0",
-    "@vue/cli-plugin-router": "4.5.0",
-    "@vue/cli-service": "4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "3.2.0",
     "@vue/eslint-config-prettier": "6.0.0",
     "babel-eslint": "10.1.0",
-    "eslint": "6.7.2",
+    "eslint": "^7.32.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.0.0",
     "prettier": "2.2.1",
