--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": "Creative Tim",
   "license": "SEE LICENSE IN <https://www.creative-tim.com/license>",
-  "description": "VueJS version of Argon Dashboard 2 by Creative Tim",
+  "description": "VueJS version of Role hub by Creative Tim",
   "homepage": "https://demos.creative-tim.com/vue-argon-dashboard/",
   "bugs": {
     "url": "https://github.com/creativetimofficial/vue-argon-dashboard/issues"
@@ -25,9 +25,10 @@
     "axios": "^1.4.0",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
-    "core-js": "3.6.5",
+    "core-js": "^3.22.2",
     "dropzone": "6.0.0-beta.1",
     "quill": "1.3.6",
+    "update": "^0.7.4",
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "4.0.14",
